# ToyXWindow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Example/: CMakeLists.txt
Example/SimpleWindow/: CMakeLists.txt  Main.cpp
Include/ToyXWindow/: BaseWindow.h  CommonType.h  IAdapter.h  IWindow.h  PlatformXWindow.h  XWindowAPI.h
Include/ToyXWindow/details/: OpenGLCommonType.h  WinBaseXWindowImpl.h  WinDX11CommonType.h  WinDX11Window.h  WinDX11XWindowImpl.h  WinWGLCommonType.h  WinWGLWindow.h  WinWGLXWindowImpl.h  WinWindow.h  XWindowImpl.h
Source/: CMakeLists.txt  CMakeSources.cmake  ToyXWindowConfig.h.in
Source/ToyXWindow/: BaseWindow.cpp  CommonType.cpp  PlatformXWindow.cpp  PlatformXWindow_Linux.cpp  PlatformXWindow_Windows.cpp  WinBaseXWindowImpl.cpp  WinDX11Window.cpp  WinDX11XWindowImpl.cpp  WinWGLWindow.cpp  WinWGLXWindowImpl.cpp  WinWindow.cpp  XWindowAPI.cpp  XWindowImpl.cpp
