# 
# ToyXWindow
# 

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(ToyXWindow)

SET(TOY_XWINDOW_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Include)
SET(TOY_XWINDOW_SOURCE_DIR ${PROJECT_SOURCE_DIR}/Source)

MESSAGE(STATUS "${PROJECT_NAME} CMake Begin...")

ADD_SUBDIRECTORY(Source)
#ADD_SUBDIRECTORY(Example)

MESSAGE(STATUS "${PROJECT_NAME} CMake End")